[v0.1.0.0] 이미지 업로더 구현

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  bulletin:
+    n1: "공지사항"
+    n2: "잡담"
+    n3: "갤러리"
